--- a/AnimalHospital/css/style.css
+++ b/AnimalHospital/css/style.css
@@ -2,8 +2,9 @@
 * {
   list-style: none;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 62.5%;
   font-family: '游ゴシック体', '游ゴシック', 'Yu Gothic', sans-serif;
+  color: #505050;
 }
 
 .pc {
@@ -12,6 +13,10 @@
 
 .no-pc {
   display: none;
+}
+
+.primary-color {
+  color: #0d96a0;
 }
 
 .wrapper {
@@ -71,6 +76,9 @@ header #site-title {
   display: flex;
   -webkit-column-gap: 9.5px;
           column-gap: 9.5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header #site-title p {
@@ -93,11 +101,8 @@ header nav ul li:not(:first-of-type) {
 }
 
 @media screen and (max-width: 860px) {
-  .pc {
-    display: none;
-  }
-  .no-pc {
-    display: block;
+  .header-wrapper {
+    padding: 0 20px;
   }
 }
 
@@ -113,6 +118,71 @@ header nav ul li:not(:first-of-type) {
   }
   header #site-title {
     margin-left: 20px;
+  }
+  header #site-title svg {
+    height: 25px;
+  }
+  header #site-title p {
+    font-size: 2rem;
+  }
+  .wrapper {
+    padding: 0 20px;
+  }
+  #top {
+    background-image: url(../images/top_sp.png);
+    background-image: -webkit-image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
+    background-image: image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 550px;
+    position: relative;
+  }
+  #top .top-message {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    font-weight: bold;
+    padding: 16px 22px 20px 20px;
+    width: 311px;
+  }
+  #top .top-message p {
+    font-size: 2rem;
+  }
+  #top .top-message p span {
+    display: block;
+    font-size: 3rem;
+    line-height: 1.2;
+    padding-top: 9px;
+  }
+  #about {
+    padding-top: 44px;
+    padding-bottom: 50px;
+  }
+  #about h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 1.4;
+  }
+  #about h1 span {
+    font-size: 2.5rem;
+    display: block;
+  }
+  #about p {
+    margin-top: 19px;
+    font-weight: normal;
+  }
+  #about p span {
+    font-size: 1.6rem;
+    display: block;
+    line-height: 1.875;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  #top {
+    background-size: auto;
   }
 }
 /*# sourceMappingURL=style.css.map */
