--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -2,14 +2,18 @@
 * {
   list-style: none;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 62.5%;
   font-family: '游ゴシック体', '游ゴシック', 'Yu Gothic', sans-serif;
+  color: #505050;
 }
 .pc {
   display: block;
 }
 .no-pc {
   display: none;
+}
+.primary-color {
+  color: #0d96a0;
 }
 .wrapper {
   padding: 0 100px;
@@ -50,6 +54,7 @@ header {
   #site-title {
     display: flex;
     column-gap: 9.5px;
+    align-items: center;
     p {
       font-weight: bold;
     }
@@ -69,16 +74,8 @@ header {
 }
 
 @media screen and (max-width: 860px) {
-  .pc {
-    display: none;
-  }
-  .no-pc {
-    display: block;
-  }
-  // header
-  header {
-    #site-title {
-    }
+  .header-wrapper {
+    padding: 0 20px;
   }
 }
 @media screen and(max-width: 425px) {
@@ -88,12 +85,82 @@ header {
   .no-pc {
     display: block;
   }
+  // header
   .header-wrapper {
     padding: 0;
   }
   header {
     #site-title {
       margin-left: 20px;
+      svg {
+        height: 25px;
+      }
+      p {
+        font-size: 2rem;
+      }
     }
+  }
+  .wrapper {
+    padding: 0 20px;
+  }
+  // top
+  #top {
+    background-image: url(../images/top_sp.png);
+    background-image: image-set(
+      url(../images/top_sp.png) 1x,
+      url(../images/top_sp@2x.png) 2x
+    );
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 550px;
+    position: relative;
+    .top-message {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(255, 255, 255, 0.7);
+      font-weight: bold;
+      padding: 16px 22px 20px 20px;
+      width: 311px;
+      p {
+        font-size: 2rem;
+        span {
+          display: block;
+          font-size: 3rem;
+          line-height: 1.2;
+          padding-top: 9px;
+        }
+      }
+    }
+  }
+  // about
+  #about {
+    padding-top: 44px;
+    padding-bottom: 50px;
+    h1 {
+      font-size: 2.5rem;
+      text-align: center;
+      line-height: 1.4;
+      span {
+        font-size: 2.5rem;
+        display: block;
+      }
+    }
+    p {
+      margin-top: 19px;
+      font-weight: normal;
+      span {
+        font-size: 1.6rem;
+        display: block;
+        line-height: 1.875;
+      }
+    }
+  }
+}
+@media screen and(max-width: 375px) {
+  // top
+  #top {
+    background-size: auto;
   }
 }
