--- a/AnimalHospital/css/style.css
+++ b/AnimalHospital/css/style.css
@@ -8,33 +8,68 @@
 }
 
 .pc {
-  display: block;
+  display: none;
+}
+
+@media screen and (min-width: 1000px) {
+  .pc {
+    display: block;
+  }
 }
 
 .no-pc {
-  display: none;
+  display: block;
+}
+
+@media screen and (min-width: 1000px) {
+  .no-pc {
+    display: none;
+  }
 }
 
 .primary-color {
   color: #0d96a0;
 }
 
+.full-size {
+  width: 100vw;
+  margin: 0 calc(50% - 50vw);
+}
+
 .wrapper {
-  padding: 0 100px;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .wrapper {
+    padding: 0 100px;
+  }
 }
 
 .header-wrapper {
-  padding: 0 99px 0 66px;
+  padding: 0 20px;
 }
 
-.toggle {
+@media screen and (min-width: 1000px) {
+  .header-wrapper {
+    padding: 0 99px 0 66px;
+  }
+}
+
+.nav-btn {
   width: 71px;
   height: 50px;
   background-color: #0d96a0;
   position: relative;
 }
 
-.toggle span {
+.nav-btn span {
   margin: 0 auto;
   display: block;
   border-bottom: 4px solid #fff;
@@ -43,21 +78,37 @@
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.toggle span:nth-child(1) {
+.nav-btn span:nth-child(1) {
   top: 13px;
 }
 
-.toggle span:nth-child(2) {
+.nav-btn span:nth-child(2) {
   top: 25.09px;
 }
 
-.toggle span:nth-child(3) {
+.nav-btn span:nth-child(3) {
   top: 37.18px;
 }
 
-header {
+.nav-btn.active span:nth-child(1) {
+  -webkit-transform: translateX(-50%) translateY(12px) rotate(-45deg);
+          transform: translateX(-50%) translateY(12px) rotate(-45deg);
+}
+
+.nav-btn.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.nav-btn.active span:nth-child(3) {
+  -webkit-transform: translateX(-50%) translateY(-12px) rotate(45deg);
+          transform: translateX(-50%) translateY(-12px) rotate(45deg);
+}
+
+header .header-area {
   height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,7 +121,7 @@ header {
           align-items: center;
 }
 
-header #site-title {
+header .header-area #site-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,41 +132,69 @@ header #site-title {
           align-items: center;
 }
 
-header #site-title p {
+header .header-area #site-title p {
   font-weight: bold;
 }
 
-header nav {
+header .header-area nav {
   font-size: 0.7rem;
   font-weight: bold;
 }
 
-header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header nav ul li:not(:first-of-type) {
-  margin-left: 10px;
-}
-
-@media screen and (max-width: 860px) {
-  .header-wrapper {
-    padding: 0 20px;
+@media screen and (min-width: 1000px) {
+  header .header-area nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
+  header .header-area nav ul li:not(:first-of-type) {
+    margin-left: 10px;
+  }
+}
+
+header .nav-column-list {
+  background-color: rgba(6, 184, 146, 0.1);
+  z-index: 999;
+}
+
+header .nav-column-list li {
+  font-size: 2rem;
+  text-align: center;
+  color: #0d96a0;
+}
+
+header .nav-column-list li:not(:last-of-type) {
+  border-bottom: 3px solid #fff;
+}
+
+#about {
+  padding-top: 44px;
+  padding-bottom: 50px;
+}
+
+#about h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  line-height: 1.4;
+}
+
+#about h1 span {
+  font-size: 2.5rem;
+  display: block;
+}
+
+#about p {
+  margin-top: 19px;
+  font-weight: normal;
+}
+
+#about p span {
+  font-size: 1.6rem;
+  display: block;
+  line-height: 1.875;
 }
 
 @media screen and (max-width: 425px) {
-  .pc {
-    display: none;
-  }
-  .no-pc {
-    display: block;
-  }
-  .header-wrapper {
-    padding: 0;
-  }
   header #site-title {
     margin-left: 20px;
   }
@@ -155,28 +234,6 @@ header nav ul li:not(:first-of-type) {
     font-size: 3rem;
     line-height: 1.2;
     padding-top: 9px;
-  }
-  #about {
-    padding-top: 44px;
-    padding-bottom: 50px;
-  }
-  #about h1 {
-    font-size: 2.5rem;
-    text-align: center;
-    line-height: 1.4;
-  }
-  #about h1 span {
-    font-size: 2.5rem;
-    display: block;
-  }
-  #about p {
-    margin-top: 19px;
-    font-weight: normal;
-  }
-  #about p span {
-    font-size: 1.6rem;
-    display: block;
-    line-height: 1.875;
   }
 }
 
