--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -1,3 +1,5 @@
+@import '_breakpoint';
+@import '_mixin';
 // common
 * {
   list-style: none;
@@ -7,21 +9,40 @@
   color: #505050;
 }
 .pc {
-  display: block;
+  display: none;
+  @include mq(lg) {
+    display: block;
+  }
 }
 .no-pc {
-  display: none;
+  display: block;
+  @include mq(lg) {
+    display: none;
+  }
 }
 .primary-color {
   color: #0d96a0;
 }
+.full-size {
+  width: 100vw;
+  margin: 0 calc(50% - 50vw);
+}
 .wrapper {
-  padding: 0 100px;
+  padding: 0;
+  @include mq(md) {
+    padding: 0 20px;
+  }
+  @include mq(xl) {
+    padding: 0 100px;
+  }
 }
 .header-wrapper {
-  padding: 0 99px 0 66px;
+  padding: 0 20px;
+  @include mq(lg) {
+    padding: 0 99px 0 66px;
+  }
 }
-.toggle {
+.nav-btn {
   width: 71px;
   height: 50px;
   background-color: #0d96a0;
@@ -34,6 +55,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    transition: all 0.5s;
     &:nth-child(1) {
       top: 13px;
     }
@@ -44,51 +66,97 @@
       top: 37.18px;
     }
   }
+  &.active {
+    span:nth-child(1) {
+      transform: translateX(-50%) translateY(12px) rotate(-45deg);
+    }
+    span:nth-child(2) {
+      opacity: 0;
+    }
+    span:nth-child(3) {
+      transform: translateX(-50%) translateY(-12px) rotate(45deg);
+    }
+  }
 }
 // header
 header {
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  #site-title {
+  .header-area {
+    height: 50px;
     display: flex;
-    column-gap: 9.5px;
+    justify-content: space-between;
     align-items: center;
-    p {
+    #site-title {
+      display: flex;
+      column-gap: 9.5px;
+      align-items: center;
+      p {
+        font-weight: bold;
+      }
+    }
+    nav {
+      font-size: 0.7rem;
       font-weight: bold;
+      ul {
+        @include mq(lg) {
+          display: flex;
+          li {
+            &:not(:first-of-type) {
+              margin-left: 10px;
+            }
+          }
+        }
+      }
     }
   }
-  nav {
-    font-size: 0.7rem;
-    font-weight: bold;
-    ul {
-      display: flex;
-      li {
-        &:not(:first-of-type) {
-          margin-left: 10px;
-        }
+  .nav-column-list {
+    background-color: rgba(6, 184, 146, 0.1);
+    z-index: 999;
+    li {
+      font-size: 2rem;
+      text-align: center;
+      color: #0d96a0;
+      &:not(:last-of-type) {
+        border-bottom: 3px solid #fff;
       }
     }
   }
 }
 
-@media screen and (max-width: 860px) {
-  .header-wrapper {
-    padding: 0 20px;
+// about
+#about {
+  padding-top: 44px;
+  padding-bottom: 50px;
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 1.4;
+    span {
+      font-size: 2.5rem;
+      display: block;
+    }
+  }
+  p {
+    margin-top: 19px;
+    font-weight: normal;
+    span {
+      font-size: 1.6rem;
+      display: block;
+      line-height: 1.875;
+    }
   }
 }
+
 @media screen and(max-width: 425px) {
-  .pc {
-    display: none;
-  }
-  .no-pc {
-    display: block;
-  }
+  // .pc {
+  //   display: none;
+  // }
+  // .no-pc {
+  //   display: block;
+  // }
   // header
-  .header-wrapper {
-    padding: 0;
-  }
+  // .header-wrapper {
+  //   padding: 0;
+  // }
   header {
     #site-title {
       margin-left: 20px;
@@ -131,29 +199,6 @@ header {
           line-height: 1.2;
           padding-top: 9px;
         }
-      }
-    }
-  }
-  // about
-  #about {
-    padding-top: 44px;
-    padding-bottom: 50px;
-    h1 {
-      font-size: 2.5rem;
-      text-align: center;
-      line-height: 1.4;
-      span {
-        font-size: 2.5rem;
-        display: block;
-      }
-    }
-    p {
-      margin-top: 19px;
-      font-weight: normal;
-      span {
-        font-size: 1.6rem;
-        display: block;
-        line-height: 1.875;
       }
     }
   }
