--- a/AnimalHospital/css/style.css
+++ b/AnimalHospital/css/style.css
@@ -11,7 +11,7 @@
   display: none;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   .pc {
     display: block;
   }
@@ -21,7 +21,7 @@
   display: block;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   .no-pc {
     display: none;
   }
@@ -36,24 +36,30 @@
   margin: 0 calc(50% - 50vw);
 }
 
+.bg-primary {
+  background-color: rgba(13, 150, 160, 0.1);
+}
+
 .wrapper {
-  padding: 0;
+  padding: 0 20px;
 }
 
 @media screen and (min-width: 768px) {
   .wrapper {
-    padding: 0 20px;
+    padding: 0 60px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1000px) {
   .wrapper {
     padding: 0 100px;
+    max-width: 1080px;
+    margin: 0 auto;
   }
 }
 
 .header-wrapper {
-  padding: 0 20px;
+  padding-left: 20px;
 }
 
 @media screen and (min-width: 1000px) {
@@ -132,8 +138,18 @@ header .header-area #site-title {
           align-items: center;
 }
 
+header .header-area #site-title svg {
+  height: 25px;
+}
+
 header .header-area #site-title p {
-  font-weight: bold;
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  header .header-area #site-title p {
+    font-weight: bold;
+  }
 }
 
 header .header-area nav {
@@ -141,7 +157,7 @@ header .header-area nav {
   font-weight: bold;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   header .header-area nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -152,94 +168,434 @@ header .header-area nav {
   }
 }
 
-header .nav-column-list {
+header .header-area .nav-column-list {
   background-color: rgba(6, 184, 146, 0.1);
   z-index: 999;
 }
 
-header .nav-column-list li {
+header .header-area .nav-column-list li {
   font-size: 2rem;
   text-align: center;
   color: #0d96a0;
 }
 
-header .nav-column-list li:not(:last-of-type) {
+header .header-area .nav-column-list li:not(:last-of-type) {
   border-bottom: 3px solid #fff;
 }
 
-#about {
+#top {
+  background-image: url(../images/top_sp.png);
+  background-image: -webkit-image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
+  background-image: image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 550px;
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  #top {
+    background-image: url(../images/top.png);
+    background-image: -webkit-image-set(url("../images/top.png") 1x, url("../images/top@2x.png") 2x);
+    background-image: image-set(url("../images/top.png") 1x, url("../images/top@2x.png") 2x);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #top {
+    background-image: auto;
+  }
+}
+
+#top .top-message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-weight: bold;
+  padding: 16px 22px 20px 20px;
+  width: 311px;
+}
+
+#top .top-message p {
+  font-size: 2rem;
+}
+
+#top .top-message p span {
+  display: block;
+  font-size: 3rem;
+  line-height: 1.2;
+  padding-top: 9px;
+}
+
+#about #about-heading {
   padding-top: 44px;
   padding-bottom: 50px;
 }
 
-#about h1 {
+#about #about-heading h1 {
   font-size: 2.5rem;
   text-align: center;
   line-height: 1.4;
 }
 
-#about h1 span {
+#about #about-heading h1 span {
   font-size: 2.5rem;
   display: block;
 }
 
-#about p {
+#about #about-heading p {
   margin-top: 19px;
   font-weight: normal;
+  position: relative;
 }
 
-#about p span {
+#about #about-heading p span {
   font-size: 1.6rem;
   display: block;
   line-height: 1.875;
 }
 
-@media screen and (max-width: 425px) {
-  header #site-title {
-    margin-left: 20px;
-  }
-  header #site-title svg {
-    height: 25px;
-  }
-  header #site-title p {
-    font-size: 2rem;
-  }
-  .wrapper {
-    padding: 0 20px;
-  }
-  #top {
-    background-image: url(../images/top_sp.png);
-    background-image: -webkit-image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
-    background-image: image-set(url(../images/top_sp.png) 1x, url(../images/top_sp@2x.png) 2x);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 550px;
-    position: relative;
-  }
-  #top .top-message {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    font-weight: bold;
-    padding: 16px 22px 20px 20px;
-    width: 311px;
-  }
-  #top .top-message p {
-    font-size: 2rem;
-  }
-  #top .top-message p span {
-    display: block;
+#about #about-heading p svg {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-heading h1 {
     font-size: 3rem;
-    line-height: 1.2;
-    padding-top: 9px;
+    line-height: 1.7;
+  }
+  #about #about-heading h1 span {
+    display: inline;
+    font-size: 3rem;
+  }
+  #about #about-heading p {
+    text-align: center;
+    font-size: 1.8rem;
+    line-height: 1.83;
   }
 }
 
-@media screen and (max-width: 375px) {
-  #top {
+#about #about-contents {
+  padding-bottom: 50px;
+}
+
+#about #about-contents .content {
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #about #about-contents .content:nth-child(odd) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  #about #about-contents .content:not(:first-of-type) {
+    margin-top: 49px;
+  }
+}
+
+#about #about-contents .content .content-image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 200px;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content .content-image {
+    width: 45%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content .content-text {
+    width: 45%;
+  }
+}
+
+#about #about-contents .content .content-text h2 {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content .content-text h2 {
+    font-size: 2.2rem;
+    line-height: 1.5;
+  }
+}
+
+#about #about-contents .content .content-text h2 span {
+  display: block;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content .content-text h2 span {
+    display: inline;
+    font-size: 2.2rem;
+  }
+}
+
+#about #about-contents .content .content-text p {
+  margin-top: 20px;
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content .content-text p {
+    font-size: 1.8rem;
+    line-height: 1.8;
+  }
+}
+
+#about #about-contents .content #content-image01 {
+  background-image: url(../images/about_01_sp.png);
+  background-image: -webkit-image-set(url("../images/about_01_sp.png") 1x, url("../images/about_01_sp@2x.png") 2x);
+  background-image: image-set(url("../images/about_01_sp.png") 1x, url("../images/about_01_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content #content-image01 {
+    background-image: url(../images/about_01.png);
+    background-image: -webkit-image-set(url("../images/about_01.png") 1x, url("../images/about_01@2x.png") 2x);
+    background-image: image-set(url("../images/about_01.png") 1x, url("../images/about_01@2x.png") 2x);
+  }
+}
+
+#about #about-contents .content #content-image02 {
+  background-image: url(../images/about_02_sp.png);
+  background-image: -webkit-image-set(url("../images/about_02_sp.png") 1x, url("../images/about_02_sp@2x.png") 2x);
+  background-image: image-set(url("../images/about_02_sp.png") 1x, url("../images/about_02_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content #content-image02 {
+    background-image: url(../images/about_02.png);
+    background-image: -webkit-image-set(url("../images/about_02.png") 1x, url("../images/about_02@2x.png") 2x);
+    background-image: image-set(url("../images/about_02.png") 1x, url("../images/about_02@2x.png") 2x);
+  }
+}
+
+#about #about-contents .content #content-image03 {
+  background-image: url(../images/about_03_sp.png);
+  background-image: -webkit-image-set(url("../images/about_03_sp.png") 1x, url("../images/about_03_sp@2x.png") 2x);
+  background-image: image-set(url("../images/about_03_sp.png") 1x, url("../images/about_03_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #about #about-contents .content #content-image03 {
+    background-image: url(../images/about_03.png);
+    background-image: -webkit-image-set(url("../images/about_03.png") 1x, url("../images/about_03@2x.png") 2x);
+    background-image: image-set(url("../images/about_03.png") 1x, url("../images/about_03@2x.png") 2x);
+  }
+}
+
+.icon-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+}
+
+.icon-heading h1 {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+#service {
+  padding: 50px 0;
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 50px;
+            column-gap: 50px;
+  }
+}
+
+#service #service-contents .service-content {
+  margin-top: 50px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents .service-content {
+    width: 260px;
+  }
+}
+
+#service #service-contents .service-content .service-content-image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 200px;
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents .service-content .service-content-image {
     background-size: auto;
+    width: 260px;
+  }
+}
+
+#service #service-contents .service-content #service-content-image01 {
+  background-image: url(../images/service_01_sp.png);
+  background-image: -webkit-image-set(url("../images/service_01_sp.png") 1x, url("../images/service_01_sp@2x.png") 2x);
+  background-image: image-set(url("../images/service_01_sp.png") 1x, url("../images/service_01_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents .service-content #service-content-image01 {
+    background-image: url(../images/service_01.png);
+    background-image: -webkit-image-set(url("../images/service_01.png") 1x, url("../images/service_01@2x.png") 2x);
+    background-image: image-set(url("../images/service_01.png") 1x, url("../images/service_01@2x.png") 2x);
+  }
+}
+
+#service #service-contents .service-content #service-content-image02 {
+  background-image: url(../images/service_02_sp.png);
+  background-image: -webkit-image-set(url("../images/service_02_sp.png") 1x, url("../images/service_02_sp@2x.png") 2x);
+  background-image: image-set(url("../images/service_02_sp.png") 1x, url("../images/service_02_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents .service-content #service-content-image02 {
+    background-image: url(../images/service_02.png);
+    background-image: -webkit-image-set(url("../images/service_02.png") 1x, url("../images/service_02@2x.png") 2x);
+    background-image: image-set(url("../images/service_02.png") 1x, url("../images/service_02@2x.png") 2x);
+  }
+}
+
+#service #service-contents .service-content #service-content-image03 {
+  background-image: url(../images/service_03_sp.png);
+  background-image: -webkit-image-set(url("../images/service_03_sp.png") 1x, url("../images/service_03_sp@2x.png") 2x);
+  background-image: image-set(url("../images/service_03_sp.png") 1x, url("../images/service_03_sp@2x.png") 2x);
+}
+
+@media screen and (min-width: 1000px) {
+  #service #service-contents .service-content #service-content-image03 {
+    background-image: url(../images/service_03.png);
+    background-image: -webkit-image-set(url("../images/service_03.png") 1x, url("../images/service_03@2x.png") 2x);
+    background-image: image-set(url("../images/service_03.png") 1x, url("../images/service_03@2x.png") 2x);
+  }
+}
+
+#service #service-contents .service-content h2 {
+  font-size: 2rem;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  #service #service-contents .service-content h2 {
+    margin-top: 20px;
+  }
+}
+
+#service #service-contents .service-content p {
+  font-size: 1.6rem;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  #service #service-contents .service-content p {
+    margin-top: 15px;
+  }
+}
+
+#information {
+  padding-top: 50px;
+}
+
+#information .information-contents {
+  margin-top: 50px;
+}
+
+#information .information-contents table {
+  border-collapse: collapse;
+  margin: 0 auto;
+  width: 100%;
+}
+
+#information .information-contents table tbody tr {
+  border-color: #707070;
+  border-style: solid;
+  border-width: 1px 0;
+  padding: 30px 0 30.4px;
+}
+
+#information .information-contents table tbody tr td {
+  display: block;
+}
+
+@media screen and (min-width: 1000px) {
+  #information .information-contents table tbody tr td {
+    display: inline-block;
+    padding: 20px 0;
+  }
+}
+
+#information .information-contents table tbody tr td:nth-child(1) {
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1000px) {
+  #information .information-contents table tbody tr td:nth-child(1) {
+    margin-top: 0;
+  }
+}
+
+#information .information-contents table tbody tr td:nth-child(2) {
+  font-weight: bold;
+  font-size: 2rem;
+  color: #0d96a0;
+}
+
+@media screen and (min-width: 1000px) {
+  #information .information-contents table tbody tr td:nth-child(2) {
+    margin-left: 29px;
+    width: 180px;
+  }
+}
+
+#information .information-contents table tbody tr td:nth-child(3) {
+  font-size: 1.6rem;
+  margin-bottom: 30.4px;
+}
+
+@media screen and (min-width: 1000px) {
+  #information .information-contents table tbody tr td:nth-child(3) {
+    margin-left: 29px;
+    margin-bottom: 0;
+    font-size: 1.7rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
