--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -10,13 +10,13 @@
 }
 .pc {
   display: none;
-  @include mq(lg) {
+  @include mq(md) {
     display: block;
   }
 }
 .no-pc {
   display: block;
-  @include mq(lg) {
+  @include mq(md) {
     display: none;
   }
 }
@@ -27,17 +27,22 @@
   width: 100vw;
   margin: 0 calc(50% - 50vw);
 }
+.bg-primary {
+  background-color: rgba(13, 150, 160, 0.1);
+}
 .wrapper {
-  padding: 0;
+  padding: 0 20px;
   @include mq(md) {
-    padding: 0 20px;
+    padding: 0 60px;
   }
-  @include mq(xl) {
+  @include mq(lg) {
     padding: 0 100px;
+    max-width: 1080px;
+    margin: 0 auto;
   }
 }
 .header-wrapper {
-  padding: 0 20px;
+  padding-left: 20px;
   @include mq(lg) {
     padding: 0 99px 0 66px;
   }
@@ -85,19 +90,30 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     #site-title {
       display: flex;
       column-gap: 9.5px;
       align-items: center;
+      svg {
+        height: 25px;
+      }
       p {
-        font-weight: bold;
+        font-size: 2rem;
+      }
+    }
+    @include mq(md) {
+      #site-title {
+        p {
+          font-weight: bold;
+        }
       }
     }
     nav {
       font-size: 0.7rem;
       font-weight: bold;
       ul {
-        @include mq(lg) {
+        @include mq(md) {
           display: flex;
           li {
             &:not(:first-of-type) {
@@ -107,16 +123,56 @@ header {
         }
       }
     }
+    .nav-column-list {
+      background-color: rgba(6, 184, 146, 0.1);
+      z-index: 999;
+      li {
+        font-size: 2rem;
+        text-align: center;
+        color: #0d96a0;
+        &:not(:last-of-type) {
+          border-bottom: 3px solid #fff;
+        }
+      }
+    }
   }
-  .nav-column-list {
-    background-color: rgba(6, 184, 146, 0.1);
-    z-index: 999;
-    li {
+}
+#top {
+  background-image: url(../images/top_sp.png);
+  background-image: image-set(
+    url(../images/top_sp.png) 1x,
+    url(../images/top_sp@2x.png) 2x
+  );
+  @include mq(md) {
+    background-image: url(../images/top.png);
+    background-image: image-set(
+      url('../images/top.png') 1x,
+      url('../images/top@2x.png') 2x
+    );
+  }
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  @include mq(md) {
+    background-image: auto;
+  }
+  height: 550px;
+  position: relative;
+  .top-message {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    font-weight: bold;
+    padding: 16px 22px 20px 20px;
+    width: 311px;
+    p {
       font-size: 2rem;
-      text-align: center;
-      color: #0d96a0;
-      &:not(:last-of-type) {
-        border-bottom: 3px solid #fff;
+      span {
+        display: block;
+        font-size: 3rem;
+        line-height: 1.2;
+        padding-top: 9px;
       }
     }
   }
@@ -124,88 +180,290 @@ header {
 
 // about
 #about {
-  padding-top: 44px;
-  padding-bottom: 50px;
-  h1 {
-    font-size: 2.5rem;
-    text-align: center;
-    line-height: 1.4;
-    span {
+  #about-heading {
+    padding-top: 44px;
+    padding-bottom: 50px;
+    h1 {
       font-size: 2.5rem;
-      display: block;
+      text-align: center;
+      line-height: 1.4;
+      span {
+        font-size: 2.5rem;
+        display: block;
+      }
     }
-  }
-  p {
-    margin-top: 19px;
-    font-weight: normal;
-    span {
-      font-size: 1.6rem;
-      display: block;
-      line-height: 1.875;
-    }
-  }
-}
-
-@media screen and(max-width: 425px) {
-  // .pc {
-  //   display: none;
-  // }
-  // .no-pc {
-  //   display: block;
-  // }
-  // header
-  // .header-wrapper {
-  //   padding: 0;
-  // }
-  header {
-    #site-title {
-      margin-left: 20px;
+    p {
+      margin-top: 19px;
+      font-weight: normal;
+      position: relative;
+      span {
+        font-size: 1.6rem;
+        display: block;
+        line-height: 1.875;
+      }
       svg {
-        height: 25px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
+    }
+    @include mq(lg) {
+      h1 {
+        font-size: 3rem;
+        line-height: 1.7;
+        span {
+          display: inline;
+          font-size: 3rem;
+        }
       }
       p {
-        font-size: 2rem;
+        text-align: center;
+        font-size: 1.8rem;
+        line-height: 1.83;
       }
     }
   }
-  .wrapper {
-    padding: 0 20px;
-  }
-  // top
-  #top {
-    background-image: url(../images/top_sp.png);
-    background-image: image-set(
-      url(../images/top_sp.png) 1x,
-      url(../images/top_sp@2x.png) 2x
-    );
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 550px;
-    position: relative;
-    .top-message {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background-color: rgba(255, 255, 255, 0.7);
-      font-weight: bold;
-      padding: 16px 22px 20px 20px;
-      width: 311px;
-      p {
-        font-size: 2rem;
-        span {
-          display: block;
-          font-size: 3rem;
-          line-height: 1.2;
-          padding-top: 9px;
+  #about-contents {
+    padding-bottom: 50px;
+    .content {
+      margin-top: 50px;
+      @include mq(lg) {
+        display: flex;
+        justify-content: space-between;
+        &:nth-child(odd) {
+          flex-direction: row-reverse;
+        }
+        &:not(:first-of-type) {
+          margin-top: 49px;
+        }
+      }
+      .content-image {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 200px;
+        @include mq(lg) {
+          width: 45%;
+        }
+      }
+      .content-text {
+        @include mq(lg) {
+          width: 45%;
+        }
+        h2 {
+          text-align: center;
+          margin-top: 30px;
+          font-size: 2rem;
+          font-weight: bold;
+          @include mq(lg) {
+            font-size: 2.2rem;
+            line-height: 1.5;
+          }
+          span {
+            display: block;
+            font-size: 2rem;
+            font-weight: bold;
+            @include mq(lg) {
+              display: inline;
+              font-size: 2.2rem;
+            }
+          }
+        }
+        p {
+          margin-top: 20px;
+          font-size: 1.6rem;
+          @include mq(lg) {
+            font-size: 1.8rem;
+            line-height: 1.8;
+          }
+        }
+      }
+      #content-image01 {
+        background-image: url(../images/about_01_sp.png);
+        background-image: image-set(
+          url('../images/about_01_sp.png') 1x,
+          url('../images/about_01_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/about_01.png);
+          background-image: image-set(
+            url('../images/about_01.png') 1x,
+            url('../images/about_01@2x.png') 2x
+          );
+        }
+      }
+      #content-image02 {
+        background-image: url(../images/about_02_sp.png);
+        background-image: image-set(
+          url('../images/about_02_sp.png') 1x,
+          url('../images/about_02_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/about_02.png);
+          background-image: image-set(
+            url('../images/about_02.png') 1x,
+            url('../images/about_02@2x.png') 2x
+          );
+        }
+      }
+      #content-image03 {
+        background-image: url(../images/about_03_sp.png);
+        background-image: image-set(
+          url('../images/about_03_sp.png') 1x,
+          url('../images/about_03_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/about_03.png);
+          background-image: image-set(
+            url('../images/about_03.png') 1x,
+            url('../images/about_03@2x.png') 2x
+          );
         }
       }
     }
   }
 }
-@media screen and(max-width: 375px) {
-  // top
-  #top {
-    background-size: auto;
+.icon-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  h1 {
+    text-align: center;
+    font-size: 2.5rem;
+  }
+}
+#service {
+  padding: 50px 0;
+  #service-contents {
+    @include mq(lg) {
+      display: flex;
+      column-gap: 50px;
+    }
+    .service-content {
+      margin-top: 50px;
+      text-align: center;
+      @include mq(lg) {
+        width: 260px;
+      }
+      .service-content-image {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 200px;
+        @include mq(lg) {
+          background-size: auto;
+          width: 260px;
+        }
+      }
+      #service-content-image01 {
+        background-image: url(../images/service_01_sp.png);
+        background-image: image-set(
+          url('../images/service_01_sp.png') 1x,
+          url('../images/service_01_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/service_01.png);
+          background-image: image-set(
+            url('../images/service_01.png') 1x,
+            url('../images/service_01@2x.png') 2x
+          );
+        }
+      }
+      #service-content-image02 {
+        background-image: url(../images/service_02_sp.png);
+        background-image: image-set(
+          url('../images/service_02_sp.png') 1x,
+          url('../images/service_02_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/service_02.png);
+          background-image: image-set(
+            url('../images/service_02.png') 1x,
+            url('../images/service_02@2x.png') 2x
+          );
+        }
+      }
+      #service-content-image03 {
+        background-image: url(../images/service_03_sp.png);
+        background-image: image-set(
+          url('../images/service_03_sp.png') 1x,
+          url('../images/service_03_sp@2x.png') 2x
+        );
+        @include mq(lg) {
+          background-image: url(../images/service_03.png);
+          background-image: image-set(
+            url('../images/service_03.png') 1x,
+            url('../images/service_03@2x.png') 2x
+          );
+        }
+      }
+      h2 {
+        font-size: 2rem;
+        margin-top: 30px;
+        @include mq(md) {
+          margin-top: 20px;
+        }
+      }
+      p {
+        font-size: 1.6rem;
+        margin-top: 20px;
+        @include mq(md) {
+          margin-top: 15px;
+        }
+      }
+    }
+  }
+}
+#information {
+  padding-top: 50px;
+  .information-contents {
+    margin-top: 50px;
+    table {
+      border-collapse: collapse;
+      margin: 0 auto;
+      width: 100%;
+      tbody {
+        tr {
+          border-color: #707070;
+          border-style: solid;
+          border-width: 1px 0;
+          padding: 30px 0 30.4px;
+          td {
+            display: block;
+            @include mq(lg) {
+              display: inline-block;
+              padding: 20px 0;
+            }
+            &:nth-child(1) {
+              font-weight: bold;
+              font-size: 1.7rem;
+              margin-top: 30px;
+              @include mq(lg) {
+                margin-top: 0;
+              }
+            }
+            &:nth-child(2) {
+              font-weight: bold;
+              font-size: 2rem;
+              color: #0d96a0;
+              @include mq(lg) {
+                margin-left: 29px;
+                width: 180px;
+              }
+            }
+            &:nth-child(3) {
+              font-size: 1.6rem;
+              margin-bottom: 30.4px;
+              @include mq(lg) {
+                margin-left: 29px;
+                margin-bottom: 0;
+                font-size: 1.7rem;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
